added depends flag to fix compatibility with other jb products (fixes #7)

--- a/resources/META-INF/plugin.xml
+++ b/resources/META-INF/plugin.xml
@@ -1,37 +1,41 @@
 <idea-plugin version="2">
-  <id>com.github.holgerbrandl.pasteimages/</id>
-  <name>Paste Images into Markdown</name>
-    <version>1.1</version>
-  <vendor email="holgerbrandl@gmail.com" url="https://github.com/holgerbrandl/pasteimages"/>
+    <id>com.github.holgerbrandl.pasteimages/</id>
+    <name>Paste Images into Markdown</name>
+    <version>1.1.1</version>
+    <vendor email="holgerbrandl@gmail.com" url="https://github.com/holgerbrandl/pasteimages"/>
 
-  <description><![CDATA[
-      Paste images into MarkDown documents directly from clipboard<br>
-      Images files are deposited in a configurable directory relative to the markdown document.
-    ]]></description>
+    <!--see http://www.jetbrains.org/intellij/sdk/docs/basics/getting_started/plugin_compatibility.html-->
+    <depends>com.intellij.modules.lang</depends>
 
-  <change-notes><![CDATA[
-    New Features:
-    <ul>
-      <li>Paste handler to use default ctrl-v to paste clipboard images</li>
-      <li>Added optional rescaling of pasted images scaleImage</li>
-    </ul>
-    ]]>
+
+    <description><![CDATA[
+        Paste images into MarkDown documents directly from clipboard<br>
+        Images files are deposited in a configurable directory relative to the markdown document.
+        ]]></description>
+
+    <change-notes><![CDATA[
+        New Features:
+        <ul>
+            <li>Paste handler to use default ctrl-v to paste clipboard images</li>
+            <li>Added optional rescaling of pasted images scaleImage</li>
+        </ul>
+        ]]>
   </change-notes>
 
-  <!-- please see http://www.jetbrains.org/intellij/sdk/docs/basics/getting_started/build_number_ranges.html for description -->
-  <idea-version since-build="141.0"/>
+    <!-- please see http://www.jetbrains.org/intellij/sdk/docs/basics/getting_started/build_number_ranges.html for description -->
+    <idea-version since-build="141.0"/>
 
-  <extensions defaultExtensionNs="com.intellij">
-    <!-- Add your extensions here -->
-    <editorActionHandler action="EditorPaste" implementationClass="img2md.PasteImageHandler" order="first" />
-  </extensions>
+    <extensions defaultExtensionNs="com.intellij">
+        <!-- Add your extensions here -->
+        <editorActionHandler action="EditorPaste" implementationClass="img2md.PasteImageHandler" order="first"/>
+    </extensions>
 
-  <!--<actions>-->
-  <!--<action id="paste_image" class="img2md.PasteImageFromClipboard" text="Paste Image into Markdown"-->
-  <!--description="Paste an image from clipboard at the current cursor position">-->
-  <!--<add-to-group group-id="EditMenu" anchor="last"/>-->
-  <!--<keyboard-shortcut keymap="$default" first-keystroke="shift meta V"/>-->
-  <!--</action>-->
-  <!--</actions>-->
+    <!--<actions>-->
+    <!--<action id="paste_image" class="img2md.PasteImageFromClipboard" text="Paste Image into Markdown"-->
+    <!--description="Paste an image from clipboard at the current cursor position">-->
+    <!--<add-to-group group-id="EditMenu" anchor="last"/>-->
+    <!--<keyboard-shortcut keymap="$default" first-keystroke="shift meta V"/>-->
+    <!--</action>-->
+    <!--</actions>-->
 
 </idea-plugin>
