--- a/gradle.properties
+++ b/gradle.properties
@@ -3,30 +3,35 @@
 
 pluginGroup = org.jetbrains.plugins.template
 pluginName = PasteImages
-pluginVersion = 1.2.10
+pluginRepositoryUrl = https://github.com/holgerbrandl/pasteimages
+pluginVersion = 1.2.11
 
-# See https://plugins.jetbrains.com/docs/intellij/build-number-ranges.html
-# for insight into build numbers and IntelliJ Platform versions.
-pluginSinceBuild = 211
-pluginUntilBuild = 221.*
+# Supported build number ranges and IntelliJ Platform versions -> https://plugins.jetbrains.com/docs/intellij/build-number-ranges.html
+pluginSinceBuild = 221
+pluginUntilBuild = 231.*
 
-# IntelliJ Platform Properties -> https://github.com/JetBrains/gradle-intellij-plugin#intellij-platform-properties
-platformType=IC
-#platformVersion=2022.1
-platformVersion = 2021.3
+# IntelliJ Platform Properties -> https://plugins.jetbrains.com/docs/intellij/tools-gradle-intellij-plugin.html#configuration-intellij-extension
+platformType = IC
+platformVersion = 2022.1.4
 
-platformDownloadSources=true
-# Plugin Dependencies -> https://www.jetbrains.org/intellij/sdk/docs/basics/plugin_structure/plugin_dependencies.html
+# Plugin Dependencies -> https://plugins.jetbrains.com/docs/intellij/plugin-dependencies.html
 # Example: platformPlugins = com.intellij.java, com.jetbrains.php:203.4449.22
 platformPlugins =
 
-# Java language level used to compile sources and to generate the files for - Java 11 is required since 2020.3
-javaVersion = 11
-
 # Gradle Releases -> https://github.com/gradle/gradle/releases
-gradleVersion = 7.4
+gradleVersion = 8.1
 
-# Opt-out flag for bundling Kotlin standard library.
-# See https://plugins.jetbrains.com/docs/intellij/kotlin.html#kotlin-standard-library for details.
-# suppress inspection "UnusedProperty"
+# Opt-out flag for bundling Kotlin standard library -> https://jb.gg/intellij-platform-kotlin-stdlib
 kotlin.stdlib.default.dependency = false
+
+# Enable Gradle Configuration Cache -> https://docs.gradle.org/current/userguide/configuration_cache.html
+org.gradle.configuration-cache = true
+
+# Enable Gradle Build Cache -> https://docs.gradle.org/current/userguide/build_cache.html
+org.gradle.caching = true
+
+# Enable Gradle Kotlin DSL Lazy Property Assignment -> https://docs.gradle.org/current/userguide/kotlin_dsl.html#kotdsl:assignment
+systemProp.org.gradle.unsafe.kotlin.assignment = true
+
+# Temporary workaround for Kotlin Compiler OutOfMemoryError -> https://jb.gg/intellij-platform-kotlin-oom
+kotlin.incremental.useClasspathSnapshot = false
